infra/k8s/expirations.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: expirations-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: expirations
    template:
        metadata:
            labels:
                app: expirations
        spec:
            containers:
                - name: expirations
                  image: 0866500635/ticket-expirations
---
apiVersion: v1
kind: Service
metadata:
    name: expirations-srv
spec:
    selector:
        app: expirations
    type: ClusterIP
    ports:
        - name: expirations
          protocol: TCP
          port: 3000
          targetPort: 3000
